Fixed phone defaulting to Home and not select when it hasn't been selected yet

--- a/force-app/main/default/classes/SummitEventsRegisterController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterController.cls
@@ -120,7 +120,7 @@ public with sharing class SummitEventsRegisterController {
 
             if (eventPage.Ask_Phone__c.containsIgnoreCase('with type') && String.isNotBlank(eventRegistration.Registrant_Mobile_Phone__c) && String.isBlank(eventRegistration.Registrant_Phone__c)) {
                 phoneType = 'mobile';
-            } else {
+            } else if (String.isBlank(eventRegistration.Registrant_Mobile_Phone__c) && String.isNotBlank(eventRegistration.Registrant_Phone__c)) {
                 phoneType = 'home';
             }
 
